20181126: 0.11.0
	Fixed the problem that binary incompatible of libcsoup between
	Cygwin gcc and MinGW gcc and vice verse. The root problem was though
	these build system were source code compatible, some macros rely on
	some global variables, which may have different symbols. For examples:
	stdout, errno, ctype "functions", etc
	* Makefile: optimism adjust to O1 to avoid strcat being optimized to
	stpcpy, which is not portable between newlibs.
	* cli/csc_cli_getopt.c: csc_cli_getopt_open() definition changes
	optind is not portable between newlibs.
	* slog/slog_core.c: removed all stdout because it's not portable
	between newlibs.
	* smm/smm_config.c: removed all stdout and errno because
	they are not portable between newlibs.
	* smm/smm_mkdir.c: isalpha() is not portable between newlibs.
	* cli/csc_cli_private.c: isalnum() is not portable between newlibs.
	* soup/csc_config.c: isxdigit() is not portable between newlibs.
	* main: adjusted according to function definition changes

20181126: 0.10.1
	* packhex: removed to main/
	* csc_tmem.c: make it better to use.
	* Makefile: optimizm adjust to -O1 to avoid strcat being optimized to
	stpcpy, which confused between newlibs.

20181121: 0.10.0
	* csc_tmem.c: added a tiny memory pool management functions.

20170815: 0.9.11
	* csc_pack_hex.c: supported packing a group of files in one C array.

20170609: 0.9.10
	* csc_url_decode.c: supported URL decoding.

20170609: 0.9.9
	* csc_gettoken.c: hardened for avoiding the buffer overflow.

20170530: 0.9.8
	* smm_fontpath.c: fixed a bug in Windows that failed to search the
	font directory.

20170511: 0.9.7
	* libcsoup.h: removed the (-1<<4) macro to avoid the warning come from
	-Wshift-negative-value in gcc 6.3.1.
	../libcsoup.h:157:30: warning: left shift of negative value
	[-Wshift-negative-value]
	+ Added: csc_strcount_char.c and csc_strcount_str.c

20160808: 0.9.6
	* slog_core.c: applying the array of translators instead of chain list